_generated-doc/3.2/config/quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config.adoc

:summaryTableId: quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_configuration]]link:#quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-suppress-non-application-uris]]`link:#quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-suppress-non-application-uris[quarkus.otel.traces.suppress-non-application-uris]`


[.description]
--
Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints.

Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

This is a Quarkus specific property. Suppressing non-application uris is enabled by default.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.suppress-non-application-uris` or defaults to `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-include-static-resources]]`link:#quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-include-static-resources[quarkus.otel.traces.include-static-resources]`


[.description]
--
Include static resources from trace collection.

This is a Quarkus specific property. Include static resources is disabled by default. Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.include-static-resources` or defaults to `false`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-sampler-arg]]`link:#quarkus-opentelemetry-config-group-config-runtime-traces-runtime-config_quarkus-otel-traces-sampler-arg[quarkus.otel.traces.sampler.arg]`


[.description]
--
An argument to the configured tracer if supported, for example a ratio.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.ratio` or defaults to `1.0`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++`
endif::add-copy-button-to-env-var[]
--|double 
|`1.0d`

|===